fix: [SRM-15566]: fix ChangeEventDetailsLink overlapping the actual link (#17906)
* fix: [SRM-15566]: fix ChangeEventDetailsLink overlapping the actual link

* worked on review comments

* changed constant name

--- a/src/modules/85-cv/pages/monitored-service/components/ServiceHealth/components/ChangesAndServiceDependency/components/ChangesTable/components/ChangeEventCard/components/ChangeDetails/ChangeDetails.module.scss
+++ b/src/modules/85-cv/pages/monitored-service/components/ServiceHealth/components/ChangesAndServiceDependency/components/ChangesTable/components/ChangeEventCard/components/ChangeDetails/ChangeDetails.module.scss
@@ -10,8 +10,9 @@
   width: fit-content;
   grid-gap: var(--padding-button) !important;
   margin: var(--spacing-large) 0 !important;
-  grid-template-columns: 10% 90%;
+  grid-template-columns: 12% 88%;
 }
+
 .gridItem {
   text-transform: capitalize;
 }
